<resources>
    <string name="app_name">SportsMatching</string>
    <!-- 조동훈 -->
    <string name="my_matching">내 매칭 현황</string>
    <string name="list">매칭 현황</string>
    <string name="community_add">글쓰기</string>
    <string name="sports_select">운동 종류 고르기</string>
    <string name="soccer">축구</string>
    <string name="bowling">볼링</string>
    <string name="badminton">배드민턴</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="ranking_page">Ranking</string>
    <string name="userid"> 조동훈 </string>
    <string name="user_major"> 컴퓨터 공학 </string>
    <string name="team"> 고어택스 </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 조동훈 -->
</resources>